# geovectors

./: .isort.cfg  .pylint.ini  .travis.yml  .verchew.ini  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py
.github/workflows/: python-package.yml
docs/: requirements.txt
geovectorslib/: __init__.py  __main__.py  datum.py  geod.py  utils.py
geovectorslib/tests/: test_datum.py  test_geod.py  test_utils.py
notebooks/: demo.ipynb
tests/: conftest.py  test_cli.py
