[tool.poetry]

name = "geovectorslib"
version = "1.01"
description = "Vectorized geodesic calculations."

license = "MIT"

authors = ["Oleg Medvedev <omdv.public@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/geovectorslib"
documentation = "https://geovectorslib.readthedocs.io"
repository = "https://github.com/omdv/geovectors"

keywords = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]

python = "^3.7"
numpy = "^1.18.0"
geographiclib = "^1.50"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.3b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"
geographiclib = "1.50"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

GeoVectors = "geovectorslib.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
